fix(css): use the dark scrollbar with `color-scheme` dark

--- a/app/global.css
+++ b/app/global.css
@@ -30,6 +30,7 @@
 
 html {
   min-width: 360px;
+  color-scheme: dark;
 }
 
 .prose .anchor {
